fixed navbar bottom options too wide

--- a/src/react-components/NavBar/styles.css
+++ b/src/react-components/NavBar/styles.css
@@ -18,3 +18,7 @@
     position: sticky;
     background-color: tomato;
 }
+
+.nav .fixed-bottom {
+    width: 200px;
+}
